removed overlapping of image icon bug

--- a/src/components/FilterDropdown/FilterDropdown.css
+++ b/src/components/FilterDropdown/FilterDropdown.css
@@ -4,6 +4,7 @@
   border-radius: 4px;
   width: 170px;
   padding: 5px;
+  z-index: 10;
   background-color: white;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
